[gd_scene load_steps=6 format=2]

[ext_resource path="res://collisions/cannon.gd" type="Script" id=1]
[ext_resource path="res://collisions/bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/cannon.png" type="Texture" id=3]
[ext_resource path="res://collisions/enable_cannon.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 143.999, 88.3094 )

[node name="cannon" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
collision_layer = 4
script = ExtResource( 1 )
bullet_angle = 179.0
bullet_gravity = 3
bullet_scene = ExtResource( 2 )
bullet_spawn_path = NodePath("bullet_spawn")

[node name="cannon" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="bullet_spawn" type="Position2D" parent="."]
position = Vector2( -145.132, -69.2168 )

[node name="enable_cannon" parent="." instance=ExtResource( 4 )]
position = Vector2( 137.269, 49.5911 )
[connection signal="body_entered" from="enable_cannon" to="." method="_on_enable_cannon_body_entered"]
[connection signal="body_exited" from="enable_cannon" to="." method="_on_enable_cannon_body_exited"]
